--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,25 @@
 .App {
-  text-align: center;
+  border: solid;
+  width: 50%;
+  margin: 10% auto;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 24px;
+  border-bottom: solid;
+  padding: 10px 20px;
+}
+.input{
+  margin: 0;
+}
+.header input{
+  width: 80%;
+  font-size: 24px;
+  margin-left: 20px;
+  border: none;
+}
+.header input:focus{
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
